<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:gravity="center_horizontal"
        android:background="@color/background"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center_vertical"
        android:hint="@string/enterCitu" />

    <Button
        android:id="@+id/btn_add_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/add" />

</LinearLayout>