<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="1dp"
        android:background="@color/primary">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/menu"
            android:background="@color/primary"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageButton"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/text"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/theme_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/empty"
            android:background="@color/primary"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/imageButton"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/current_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/primary">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:textColor="@color/text"
            android:layout_gravity="center"
            android:layout_marginEnd="20sp"/>

        <ImageView
            android:id="@+id/current_temperature_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_gravity="center"
            android:src="@drawable/empty"
            android:contentDescription="@string/image"/>
    </LinearLayout>

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/text"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/hourly_weather_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_weather_layout"
        android:padding="16dp"
        android:scrollbars="none"
        android:background="@color/primary"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/common_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hourly_weather_scroll"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:background="@color/background"
        android:paddingHorizontal="20dp"
        android:textColor="@color/text2"
        android:layout_margin="5sp"
        android:textStyle="bold"
        android:text="@string/mainInfo" />

    <ScrollView
        android:id="@+id/daily_weather_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/common_text"
        android:background="@color/background"
        android:padding="16dp"
        android:overScrollMode="never">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


    <View
        android:id="@+id/transparent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone" />

    <!-- Выдвигающееся меню -->
    <LinearLayout
        android:id="@+id/sliding_menu"
        android:layout_width="120pt"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary"
        android:translationX="-120pt"
        android:elevation="16dp">


        <LinearLayout
            android:id="@+id/menu_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:backgroundTint="@color/primary"
            android:paddingVertical="1dp"
            android:background="#E0E0E0">

            <ImageButton
                android:id="@+id/menu_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:background="#E0E0E0"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/primary"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/imageButton"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/add_city_button"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/add" />

        </LinearLayout>

        <!-- Список городов -->
        <ListView
            android:id="@+id/city_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
